// Copyright (c) 2022 Vitality South, LLC <chris@vitalitysouth.com>
// All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";
package magnoliafabrics;

option go_package = "github.com/Vitality-South/magfabrics-api/pkg/discontinuedfabric";

message DiscontinuedFabric {
    // @gotags: dynamo:"PK"
    string PK = 1;

    // @gotags: dynamo:"SK"
    string Sku = 2;
}