// Copyright (c) 2022 Vitality South, LLC <chris@vitalitysouth.com>
// All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";
package magnoliafabrics;

option go_package = "github.com/Vitality-South/magnolia-fabrics-api/pkg/cleaningcode";

message CleaningCode {
    // @gotags: dynamo:"CleaningCodeID"
    string id = 1;

    // @gotags: dynamo:"CleaningCodeDescription"
    string description = 2;
}